# CNN-industrial-defect-detection

./: .gitignore  CMakeLists.txt  README.md  cahier-charge.md
config/: config.yaml  training_config.yaml
data/: dataset_config.yaml  dataset_summary.txt  orgnize_kaggle_data.py
include/: CNNModel.h  DataLoader.h  DecisionEngine.h  Evaluator.h  ImageLoader.h  LossFunctions.h  ModelTrainer.h  Preprocessor.h  Visualizer.h
src/: CNNModel.cpp  DataLoader.cpp  DecisionEngine.cpp  Evaluator.cpp  ImageLoader.cpp  LossFunctions.cpp  ModelTrainer.cpp  Preprocessor.cpp  Visualizer.cpp  main.cpp  train_main.cpp
